# git2md

./: .SRCINFO  .gitignore  Justfile  PKGBUILD  README.md  README_RU.md  environment.yml  install.py  pyproject.toml  setup.py
.github/workflows/: release-python.yaml  release.yaml  test.yaml
src/: .globalignore  __init__.py
src/converters/: binary.py  default.py
