[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "git2md"
version = "1.1.0"
description = "Convert Git repository contents to Markdown format"
readme = "README.md"
authors = [
    { name = "Michael", email = "x30827pos@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: Markup :: Markdown"
]
requires-python = ">=3.12"
dependencies = [
    "pathspec>=0.12.1",
    "nbconvert>=7.16.4",
    "pymupdf4llm>=0.0.17"
]

[project.scripts]
git2md = "src.git2md:main"

[tool.setuptools]
packages = ["src"]
package-data = { "src" = ["*.globalignore"] }

[tool.check-manifest]
include = [
    "*.md",
    "*.rst",
    "*.txt",
    "*.toml",
    "*.py",
    "*.globalignore",
    "LICENSE"
]

[tool.pylint]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116"  # Missing function docstring
]

[tool.coverage.run]
branch = true
source = ["src"]

