[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "git2md"
version = "1.1.0"
description = "Convert Git repository contents to Markdown format"
readme = "README.md"
authors = [
    { name = "Michael", email = "x30827pos@gmail.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: Markup :: Markdown"
]
dependencies = [
    { name = "pathspec", version = "^0.12.1" },
    { name = "nbconvert", version = "^7.16.4" },
    { name = "pymupdf4llm", version = "^0.0.17" }
]

[tool.poetry.scripts]
git2md = "src.git2md:main"

